<resources>
    <string name="app_name">Mod Control</string>

    <string name="device">Device</string>
    <string name="color_mods">Color Mods</string>
    <string name="other_mods">Other Mods</string>
    <string name="power_mods">Power Menu Mods</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="signature_color">Signature Color</string>
    <string name="aod_signature_color">AOD Signature Color</string>
    <string name="navbar_button_color">NavBar Button Color</string>
    <string name="qt_1">First Toggle</string>
    <string name="qt_2">Second Toggle</string>
    <string name="qt_3">Third Toggle</string>
    <string name="qt_4">Fourth Toggle</string>
    <string name="qt_5">Fifth Toggle</string>
    <string name="qt_6">Sixth Toggle</string>
    <string name="qt_7">Seventh Toggle</string>
    <string name="qt_8">Eighth Toggle</string>
    <string name="qt_9">Ninth Toggle</string>
    <string name="qt_10">Tenth Toggle</string>
    <string name="qt_11">Eleventh Toggle</string>
    <string name="qt_12">Twelfth Toggle</string>
    <string name="minbatstat">3Minit Battery in Status Bar</string>
    <string name="minclockstat">3Minit Clock in Status Bar</string>
    <string name="aospsignal">AOSP Signal Icon</string>
    <string name="minbataod">3Minit Battery in AOD</string>
    <string name="minclockaod">3Minit Clock in AOD</string>
    <string name="minbatimm">3Minit Battery in Immersive Mode</string>
    <string name="minclockimm">3Minit Clock in Immersive Mode</string>
    <string name="wakeplug">Wake On Plug</string>
    <string name="chargewarn">Slow Charger Warning</string>
    <string name="sbscreen">SignBoard in Screenshot</string>
    <string name="restart_sysui">Restart System UI</string>
    <string name="hot_reboot">Hot Reboot</string>
    <string name="lock_reply">Reply From Lock Screen</string>

    <string name="current_device">Detected Device:</string>
    <string name="color_mods_summary">Change the color of certain elements of the UI.</string>
    <string name="other_mods_summary">Toggle various UI options.</string>
    <string name="power_mods_summary">Customize the power menu.</string>
    <string name="dark_mode_summary">Use dark theme in app.</string>
    <string name="bat_aod_warn">3Minit Clock won\'t update in the AOD on the V20!</string>
    <string name="lock_reply_summary">Allow usage of notifications\' inline reply function while on the lock screen</string>

    <string name="general">General</string>
    <string name="mods">Mods</string>
    <string name="other">Other</string>
    <string name="quicktools_colors_title">QuickTools</string>
    <string name="signature_colors_title">Signatures</string>
    <string name="navbar_color_title">Navigation Bar</string>
    <string name="status_bar">Status Bar</string>
    <string name="aod">AOD</string>
    <string name="immersive">Immersive Status Bar</string>
    <string name="navbar">Navigation Bar</string>
    <string name="enable">Enable</string>

    <string name="statbar_size">Status Bar Size</string>
    <string name="navbar_size">Navigation Bar Size</string>
    <string name="navbar_button_padding">Navigation Bar Button Padding</string>
    <string name="power_confirm">Confirm Power-Off/Reboot</string>

    <string name="grant_perm_message">
        Please grant the following permission to com.zacharee1.modcontrolredesign:\n\nandroid.permission.WRITE_SECURE_SETTINGS
    </string>
    <string name="unsupported_device">Your device, (%s), is unsupported. You need either an LG V20 (%s) or LG G5 (%s) to use this app.</string>

    <string-array name="device_arr_display">
        <item>V20</item>
        <item>G5</item>
    </string-array>
    <string-array name="device_arr_vals">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="force_basic_info">Force Back to First Screen</string>
    <string name="opaque_color">Opaque</string>
    <string name="semi_transparent_color">Semi-Transparent</string>
    <string name="transparent_color">Transparent</string>
    <string name="reset">Reset</string>
    <string name="force_opaque">Force Use of Opaque Color</string>
    <string name="enable_button_coloring">Enable Button Coloring</string>
    <string name="second_screen">Second Screen</string>
    <string name="reboot_needed">You need to reboot to install the mods. Would you like to do that now? If not, the installation will happen when you next reboot to Recovery.</string>

    <string name="show_home_screen_widgets">Show Home Screen Widgets In Settings</string>

    <string name="power">Power Off</string>
    <string name="reboot">Reboot</string>
    <string name="recovery">Recovery</string>
    <string name="airplane">Airplane Mode</string>
    <string name="settings">Settings</string>
    <string name="lockdown">Lock Device</string>
    <string name="bugreport">Capture Bug Report</string>
    <string name="users">Users</string>
    <string name="silent">Ringer Volume</string>
    <string name="assist">Assistant</string>
    <string name="voiceassist">Voice Assistant</string>

    <string name="enable_aosp_power_menu">AOSP Power Menu</string>
    <string name="edit_power_buttons">Edit Buttons</string>

    <string name="blank"> </string>
    <string name="download_only">Download Only</string>

    <string name="update_available">Update Available!</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="mods_not_installed">Missing Mods!</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="no_updates_found">No updates found.</string>

    <string name="update_available_desc">An update for the mod pack, dated %s, is available. Would you like to download it now?</string>
    <string name="mods_not_installed_desc">It appears that you don\'t have any mods installed. This app won\'t do anything without them. Would you like to download them now?</string>

    <string name="override_fingerprint">Always Allow Fingerprint Unlock</string>
    <string name="check_updates_failed">Unable to check for updates.</string>
</resources>
