<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <Preference
            android:title="@string/device"
            android:key="device"
            android:enabled="false" />

        <Preference
            android:title="@string/restart_sysui"
            android:key="restart_sysui" />

        <Preference
            android:title="@string/hot_reboot"
            android:key="hot_reboot" />

        <Preference
            android:title="@string/check_for_updates"
            android:key="check_for_updates" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/mods"
        android:key="mods" >

        <Preference
            android:title="@string/color_mods"
            android:summary="@string/color_mods_summary"
            android:key="color_mods" />

        <Preference
            android:title="@string/other_mods"
            android:summary="@string/other_mods_summary"
            android:key="other_mods" />

        <Preference
            android:title="@string/power_mods"
            android:summary="@string/power_mods_summary"
            android:key="power_menu" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">

        <SwitchPreference
            android:title="@string/dark_mode"
            android:summary="@string/dark_mode_summary"
            android:key="dark_mode" />

        <SwitchPreference
            android:title="Launcher Icon"
            android:defaultValue="true"
            android:summary="Show icon in launcher to open Mod Control"
            android:key="show_launcher" />

    </PreferenceCategory>

</PreferenceScreen>